plugins {
    id 'java'
}

group 'org.javatest'
version '1.0-SNAPSHOT'

sourceCompatibility = 13

repositories {
    mavenCentral()
}


compileJava {
    options.compilerArgs += ["--enable-preview"]
}
test {
    jvmArgs '--enable-preview'
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
